<resources>
    <string name="app_name" translatable="false">LibreTranslator</string>

    <string name="aboutAndSettings">About and Settings</string>
    <string name="switch_theme">switch theme</string>
    <string name="removeText">remove text</string>
    <string name="typeToTranslate">type to translate…</string>
    <string name="copy">copy</string>
    <string name="share">share</string>
    <string name="chooseSLanguage">choose source language</string>
    <string name="chooseTLanguage">choose target language</string>
    <string name="switchLanguages">switch languages</string>

    <string name="rlyRemoveText">Really remove the text?</string>
    <string name="neverAskAgain">Never ask again</string>
    <string name="remove">Remove</string>
    <string name="shareTranslation">Share your translation</string>
    <string name="copiedClipboard">Copied to Clipboard</string>
    <string name="chooseLang">Choose language</string>
    <string name="save">Save</string>
    <string name="abort">Abort</string>
    <string name="netError">Connection to server failed - check your internet connection</string>
    <string name="langError">is not a valid language - please report this if this is an actual language code</string>

    <string name="addCustomServer">Enter custom server URL</string>
    <string name="addApiKey">Add API key (if necessary)</string>
    <string name="shrink_view">Fit view above keyboard</string>
    <string name="base">Based on <a href="https://libretranslate.de/">LibreTranslate-API</a>, licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">AGPLv3</a></string>
    <string name="reportError">Found a mistake? Strange behaviour?\nReport it on <a href="https://gitlab.com/BeowuIf/libretranslator/-/issues">GitLab</a> or via <a href="mailto:incoming+beowuif-libretranslator-28803428-issue-@incoming.gitlab.com">email</a></string>
    <string name="created_by">Created by <a href="https://gitlab.com/BeowuIf/libretranslator/">Beowulf</a> licensed under <a href="https://gitlab.com/BeowuIf/libretranslator/-/blob/master/LICENSE">EUPL-1.2</a></string>
    <string name="close">Close</string>

    <string-array name="Lang">
        <item>Arabic</item>
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Turkish</item>
        <item>Vietnamese</item>
        <item>Azerbaijani</item>
        <item>Czech</item>
        <item>Dutch</item>
        <item>Esperanto</item>
        <item>Finnish</item>
        <item>Greek</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Persian</item>
        <item>Slovak</item>
        <item>Swedish</item>
        <item>Ukranian</item>
        <item>Danish</item>
        <item>Norwegian</item>
    </string-array>

    <string-array name="LangCodes">
        <item>ar</item>
        <item>zh</item>
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <item>hi</item>
        <item>id</item>
        <item>ga</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>pl</item>
        <item>pt</item>
        <item>ru</item>
        <item>es</item>
        <item>tr</item>
        <item>vi</item>
        <item>az</item>
        <item>cs</item>
        <item>nl</item>
        <item>eo</item>
        <item>fi</item>
        <item>el</item>
        <item>hu</item>
        <item>id</item>
        <item>fa</item>
        <item>sk</item>
        <item>sv</item>
        <item>uk</item>
        <item>da</item>
        <item>no</item>
    </string-array>
</resources>
